# quintesseract

./: README.md  pyproject.toml
quintesseract/: __init__.py  __main__.py
quintesseract/memory/: memory_ops.py
quintesseract/numerics/: number.py  quint_core.py
tests/: test_quint.py
